[gd_scene load_steps=7 format=3 uid="uid://bo7ahvvu7g718"]

[ext_resource type="PackedScene" uid="uid://blqjqujwtkoj" path="res://scenes/GameUI/CarUi.tscn" id="1_k6e7w"]
[ext_resource type="Script" uid="uid://v1012rbfsn75" path="res://src/GameUi.gd" id="1_s76ix"]
[ext_resource type="Script" uid="uid://kxgt6dcc47uk" path="res://src/CarUi.gd" id="3_7y0a3"]
[ext_resource type="FontFile" uid="uid://b8a6k2m8x73wx" path="res://assets/fonts/F1-Font-Family/Formula1-Regular-1.ttf" id="4_xg3kr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7y0a3"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="LabelSettings" id="LabelSettings_5bnkn"]
font = ExtResource("4_xg3kr")
font_size = 25

[node name="GameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s76ix")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CarUi" parent="MarginContainer" instance=ExtResource("1_k6e7w")]
layout_mode = 2
script = ExtResource("3_7y0a3")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7y0a3")

[node name="RaceOverLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "saasassasas"
label_settings = SubResource("LabelSettings_5bnkn")
